# cuMat

./: AGENTS.md  CHANGE_LIST.md  CMakeLists.txt  README.md
cuMat/src/: BinaryOps.h  BinaryOpsPlugin.inl  CholeskyDecomposition.h  ConjugateGradient.h  Context.h  CublasApi.h  CusolverApi.h  CwiseOp.h  DenseLinAlgOps.h  EigenInteropHelpers.h  Errors.h  Iterator.h  Logging.h  Macros.h  Matrix.h  ProductOp.h  ReductionAlgorithmSelection.h  ReductionOps.h  SimpleRandom.h  SparseEvaluation.h  SparseExpressionOp.h  SparseMatrix.h  SparseMatrixBase.h  SparseProductEvaluation.h  TransposeOp.h  UnaryOps.h  UnaryOpsPlugin.inl
tests_gtest/: CMakeLists.txt  TestBinaryOps.cu  TestComplexOps.cu  TestConjugateGradient.cu  TestContext.cu  TestEigenInterop.cu  TestFromLinear.cu  TestIntegerTypes.cu  TestIterators.cu  TestLinAlg.cu  TestMatrix.cu  TestProduct.cu  TestReductions.cu  TestSparse.cu  TestUnaryOps.cu  Utils.h
